err/gli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/gli'...
Listing './lib/python3.5/site-packages/gli/commands'...
Compiling './lib/python3.5/site-packages/gli/commands/delete_environment.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (delete_environment.py, line 37)
Compiling './lib/python3.5/site-packages/gli/commands/delete_variable.py'...
***   File "./lib/python3.5/site-packages/gli/commands/delete_variable.py", line 49
    except gitlab.exceptions.GitlabGetError,e:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gli/commands/get_environment.py'...
***   File "./lib/python3.5/site-packages/gli/commands/get_environment.py", line 37
    print "list: name=" + env.name + " id=" + str(env.id) + " url=" + str(env.external_url)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gli/commands/get_project.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (get_project.py, line 32)
Compiling './lib/python3.5/site-packages/gli/commands/get_variable.py'...
***   File "./lib/python3.5/site-packages/gli/commands/get_variable.py", line 48
    except gitlab.exceptions.GitlabGetError,e:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gli/commands/set_variable.py'...
***   File "./lib/python3.5/site-packages/gli/commands/set_variable.py", line 28
    except gitlab.exceptions.GitlabGetError,e:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gli/commands/toggle_registry.py'...
***   File "./lib/python3.5/site-packages/gli/commands/toggle_registry.py", line 41
    except gitlab.exceptions.GitlabGetError,e:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gli/utils.py'...
***   File "./lib/python3.5/site-packages/gli/utils.py", line 77
    print self.B+msg+self.N
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gli-0.0.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
